force-app/AqLib/apex/core/tests/objects/TestObject__c/TestObject__c.object-meta.xml
<CustomObject>
    <description>This object exists only to provide test coverage for common trigger methods. It should only be populated in tests and never contain data in production.</description>
    <label>Test Object</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Test Objects</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>