force-app/AqLib/apex/core/tests/objects/TestObject__c/fields/AddressCity__c.field-meta.xml
<CustomField>
    <fullName>AddressCity__c</fullName>
    <label>Address City</label>
    <length>80</length>
    <type>Text</type>
</CustomField>