force-app/AqLib/apex/core/tests/objects/TestObject__c/fields/AddressCountry__c.field-meta.xml
<CustomField>
    <fullName>AddressCountry__c</fullName>
    <label>Address Country</label>
    <length>40</length>
    <type>Text</type>
</CustomField>