force-app/AqLib/apex/core/tests/objects/TestObject__c/fields/AddressCountryCode__c.field-meta.xml
<CustomField>
    <fullName>AddressCountryCode__c</fullName>
    <label>AddressCountryCode</label>
    <length>2</length>
    <type>Text</type>
</CustomField>