force-app/AqLib/apex/core/tests/objects/TestObject__c/fields/AddressPostalCode__c.field-meta.xml
<CustomField>
    <fullName>AddressPostalCode__c</fullName>
    <label>Address Postal Code</label>
    <length>20</length>
    <type>Text</type>
</CustomField>