force-app/AqLib/apex/core/tests/objects/TestObject__c/fields/AddressState__c.field-meta.xml
<CustomField>
    <fullName>AddressState__c</fullName>
    <label>Address State</label>
    <length>40</length>
    <type>Text</type>
</CustomField>