force-app/AqLib/apex/core/tests/objects/TestObject__c/fields/AddressStateCode__c.field-meta.xml
<CustomField>
    <fullName>AddressStateCode__c</fullName>
    <label>Address State Code</label>
    <length>2</length>
    <type>Text</type>
</CustomField>