force-app/AqLib/apex/core/tests/objects/TestObject__c/fields/AddressStreet__c.field-meta.xml
<CustomField>
    <fullName>AddressStreet__c</fullName>
    <label>Address Street</label>
    <length>255</length>
    <type>Text</type>
</CustomField>