force-app/AqLib/apex/core/tests/objects/TestObject__c/fields/Checkbox__c.field-meta.xml
<CustomField>
    <fullName>Checkbox__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Test Checkbox field.</description>
    <label>Checkbox</label>
    <type>Checkbox</type>
</CustomField>