force-app/AqLib/apex/core/tests/objects/TestObject__c/fields/Date__c.field-meta.xml
<CustomField>
    <fullName>Date__c</fullName>
    <description>Test Date field.</description>
    <label>Date</label>
    <type>Date</type>
</CustomField>