force-app/AqLib/apex/core/tests/objects/TestObject__c/fields/DateTime__c.field-meta.xml
<CustomField>
    <fullName>DateTime__c</fullName>
    <description>Test DateTime field.</description>
    <label>DateTime</label>
    <type>DateTime</type>
</CustomField>