force-app/AqLib/apex/core/tests/objects/TestObject__c/fields/Email__c.field-meta.xml
<CustomField>
    <fullName>Email__c</fullName>
    <description>Test Email field.</description>
    <label>Email</label>
    <type>Email</type>
</CustomField>