force-app/AqLib/apex/core/tests/objects/TestObject__c/fields/Geo__c.field-meta.xml
<CustomField>
    <fullName>Geo__c</fullName>
    <description>Test Geo field.</description>
    <label>Geo</label>
    <scale>6</scale>
    <type>Location</type>
</CustomField>