force-app/AqLib/apex/core/tests/objects/TestObject__c/fields/Integer__c.field-meta.xml
<CustomField>
    <fullName>Integer__c</fullName>
    <description>Test integer field.</description>
    <label>Integer</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>