force-app/AqLib/apex/core/tests/objects/TestObject__c/fields/LongText__c.field-meta.xml
<CustomField>
    <fullName>LongText__c</fullName>
    <description>Test Long Text field.</description>
    <label>Long Text</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>