force-app/AqLib/apex/core/tests/objects/TestObject__c/fields/Lookup__c.field-meta.xml
<CustomField>
    <fullName>Lookup__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Lookup</label>
    <referenceTo>TestObject__c</referenceTo>
    <relationshipLabel>Aquiva Test Objects</relationshipLabel>
    <relationshipName>AquivaTestObjects</relationshipName>
    <type>Lookup</type>
</CustomField>