force-app/AqLib/apex/core/tests/objects/TestObject__c/fields/LookupEmail__c.field-meta.xml
<CustomField>
    <fullName>LookupEmail__c</fullName>
    <description>Lookup Test Email field.</description>
    <formula>Lookup__r.Email__c</formula>
    <label>Lookup Email</label>
    <type>Text</type>
</CustomField>