force-app/AqLib/apex/core/tests/objects/TestObject__c/fields/MultiPicklist__c.field-meta.xml
<CustomField>
    <fullName>MultiPicklist__c</fullName>
    <description>Test multi-select picklist.</description>
    <label>Multi Picklist</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Value One</fullName>
            </value>
            <value>
                <fullName>Value Two</fullName>
            </value>
            <value>
                <fullName>Value Three</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>