force-app/AqLib/apex/core/tests/objects/TestObject__c/fields/Phone__c.field-meta.xml
<CustomField>
    <fullName>Phone__c</fullName>
    <description>Test Phone field.</description>
    <label>Phone</label>
    <type>Phone</type>
</CustomField>