force-app/AqLib/apex/core/tests/objects/TestObject__c/fields/Picklist__c.field-meta.xml
<CustomField>
    <fullName>Picklist__c</fullName>
    <description>Test Picklist field.</description>
    <label>Picklist</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Value One</fullName>
            </value>
            <value>
                <fullName>Value Two</fullName>
            </value>
            <value>
                <fullName>Value Three</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>