force-app/AqLib/apex/core/tests/objects/TestObject__c/fields/RequiredText__c.field-meta.xml
<CustomField>
    <fullName>RequiredText__c</fullName>
    <description>Text field that&#39;s required.</description>
    <inlineHelpText>Text field that&#39;s required.</inlineHelpText>
    <label>Required Text</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>