force-app/AqLib/apex/core/tests/objects/TestObject__c/fields/RichText__c.field-meta.xml
<CustomField>
    <fullName>RichText__c</fullName>
    <description>Test RichText field.</description>
    <label>RichText</label>
    <length>131072</length>
    <type>Html</type>
</CustomField>