force-app/AqLib/apex/core/tests/objects/TestObject__c/fields/Text__c.field-meta.xml
<CustomField>
    <fullName>Text__c</fullName>
    <description>Test Text field.</description>
    <label>Text</label>
    <length>255</length>
    <type>Text</type>
</CustomField>