force-app/AqLib/apex/core/tests/objects/TestObject__c/fields/TextArea__c.field-meta.xml
<CustomField>
    <fullName>TextArea__c</fullName>
    <description>Text TextArea field.</description>
    <label>TextArea</label>
    <type>TextArea</type>
</CustomField>