force-app/AqLib/apex/core/tests/objects/TestObject__c/fields/Url__c.field-meta.xml
<CustomField>
    <fullName>Url__c</fullName>
    <description>Test URL field.</description>
    <label>URL</label>
    <type>Url</type>
</CustomField>