force-app/AqLib/apex/core/tests/objects/TestObject__c/recordTypes/RecordType1.recordType-meta.xml
<RecordType>
    <fullName>RecordType1</fullName>
    <active>true</active>
    <description>Test record type 1</description>
    <label>Record Type 1</label>
</RecordType>