force-app/AqLib/apex/core/tests/objects/TestObject__c/recordTypes/RecordType2.recordType-meta.xml
<RecordType>
    <fullName>RecordType2</fullName>
    <active>true</active>
    <description>Test record type 2.</description>
    <label>Record Type 2</label>
</RecordType>